feat(appkit): activate public input contract